--- a/public/index.html
+++ b/public/index.html
@@ -2,136 +2,321 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AI Architecture to IaC Tool</title>
+  <title>AI Architecture to Terraform</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #eef2f3, #8e9eab);
       margin: 0;
-      padding: 40px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    h1 {
+      padding: 0;
+      background-color: #f4f6f8;
       color: #333;
-      margin-bottom: 20px;
-      font-size: 28px;
     }
 
-    .card {
-      background-color: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      width: 100%;
-      max-width: 600px;
+    header {
+      background-color: #2c3e50;
+      color: white;
+      padding: 1rem;
       text-align: center;
     }
 
-    input[type="file"] {
-      margin: 20px 0;
-      font-size: 16px;
+    main {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .upload-section {
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      margin-bottom: 2rem;
+    }
+
+    .chat {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .chat-item {
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    }
+
+    .chat-img {
+      width: 256px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    pre {
+      background: #ecf0f1;
+      padding: 1rem;
+      border-radius: 4px;
+      overflow-x: auto;
     }
 
     button {
-      background-color: #0078d4;
-      color: white;
+      margin: 0.5rem 0.5rem 0 0;
+      padding: 0.5rem 1rem;
       border: none;
-      padding: 12px 24px;
-      font-size: 16px;
-      border-radius: 6px;
+      background-color: #3498db;
+      color: white;
+      border-radius: 4px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
     }
 
     button:hover {
-      background-color: #005fa3;
+      background-color: #2980b9;
     }
 
-    #uploadedImage {
-      max-width: 100%;
+    #popup {
+      display: none;
+      position: fixed;
+      top: 10%;
+      left: 10%;
+      width: 80%;
+      height: 80%;
+      background: white;
+      border: 2px solid #000;
+      z-index: 1000;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+
+    #popup img {
+      width: 100%;
       height: auto;
-      margin-top: 30px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      display: none;
     }
 
-    #response {
-      margin-top: 30px;
-      background-color: #f9f9f9;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      white-space: pre-wrap;
-      font-family: monospace;
-      display: none;
+    #popup-close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+    /* Greys out disabled buttons */
+    button:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
     }
 
-    .loader {
-      display: none;
-      margin-top: 20px;
+    /* Progress UI */
+    .progress.hidden { display: none; }
+    .progress {
+      margin-top: 0.75rem;
+    }
+
+    .progress-text {
+      font-size: 0.95rem;
+      color: #555;
+      margin-bottom: 0.4rem;
+    }
+
+    /* Simple indeterminate bar */
+    .progress-bar {
+      width: 100%;
+      height: 6px;
+      background: #e0e6eb;
+      border-radius: 4px;
+      overflow: hidden;
+    }
+    .progress-bar-fill {
+      width: 40%;
+      height: 100%;
+      background: linear-gradient(90deg, #6aa6e8, #3498db);
+      border-radius: 4px;
+      animation: indeterminate 1.2s infinite ease-in-out;
+    }
+
+    /* Move the bar from left to right repeatedly */
+    @keyframes indeterminate {
+      0%   { transform: translateX(-100%); }
+      50%  { transform: translateX(20%); }
+      100% { transform: translateX(200%); }
     }
   </style>
 </head>
 <body>
-  <h1>AI Architecture to IaC Tool</h1>
-  <div class="card">
-    <form id="uploadForm" enctype="multipart/form-data">
-      <p>Select an architecture diagram image to extract cloud components:</p>
-      <input type="file" name="diagram" accept="image/*" />
-      <button type="submit">Upload Diagram</button>
-    </form>
+  <header>
+    <h1>AI Architecture to Terraform Generator</h1>
+  </header>
 
-    <div class="loader" id="loader">⏳ Processing image...</div>
-    <img id="uploadedImage" alt="Uploaded Diagram" />
-    <pre id="response"></pre>
-  </div>
+  <main>
+    <div class="upload-section">
+      <input type="file" id="upload" />
+      <button id="btn-generate" onclick="generate()">Generate Terraform</button>
+      <div id="gen-progress" class="progress hidden" aria-live="polite">
+        <div class="progress-text">Generating Terraform from your diagram…</div>
+        <div class="progress-bar">
+          <div class="progress-bar-fill"></div>
+        </div>
+      </div>
+    </div>
 
-  <script>
-    document.getElementById('uploadForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const formData = new FormData(e.target);
-      const fileInput = e.target.querySelector('input[type="file"]');
-      const file = fileInput.files[0];
+    <div id="chat" class="chat"></div>
 
-      if (!file) return;
+    <div id="popup">
+      <span id="popup-close">❌</span>
+      <img id="popup-img" />
+    </div>
+  </main>
 
-      // Show loader
-      document.getElementById('loader').style.display = 'block';
-      document.getElementById('response').style.display = 'none';
-      document.getElementById('uploadedImage').style.display = 'none';
+<script>
+  const chat = document.getElementById('chat');
+  const popup = document.getElementById('popup');
+  const popupImg = document.getElementById('popup-img');
+  const popupClose = document.getElementById('popup-close');
 
-      try {
-        const res = await fetch('/upload', {
-          method: 'POST',
-          body: formData
-        });
+  // NEW: Cached refs for progress and button
+  const genBtn = document.getElementById('btn-generate');
+  const genProgress = document.getElementById('gen-progress');
 
-        const terraformCode = await res.text();
+  popupClose.onclick = () => popup.style.display = 'none';
 
-        // Hide loader
-        document.getElementById('loader').style.display = 'none';
+  function showPopup(src) {
+    popupImg.src = src;
+    popup.style.display = 'block';
+  }
 
-        // Show image preview
-        const imageUrl = URL.createObjectURL(file);
-        const imgElement = document.getElementById('uploadedImage');
-        imgElement.src = imageUrl;
-        imgElement.style.display = 'block';
+  function showGeneratingUI() {
+    genBtn.disabled = true;
+    genProgress.classList.remove('hidden');
+  }
+  function resetGeneratingUI() {
+    genBtn.disabled = false;
+    genProgress.classList.add('hidden');
+  }
 
-        // Show Terraform code
-        const responseElement = document.getElementById('response');
-        responseElement.textContent = terraformCode;
-        responseElement.style.display = 'block';
-      } catch (error) {
-        console.error('Upload failed:', error);
-        document.getElementById('loader').style.display = 'none';
-        document.getElementById('response').textContent = '❌ Failed to process image.';
-        document.getElementById('response').style.display = 'block';
-      }
+  async function generate() {
+    const fileInput = document.getElementById('upload');
+    const file = fileInput.files[0];
+    if (!file) return alert('Please upload a diagram.');
+
+    const formData = new FormData();
+    formData.append('diagram', file);
+
+    // Disable button + show progress
+    showGeneratingUI();
+
+    try {
+      const res = await fetch('/upload', { method: 'POST', body: formData });
+      const code = await res.text();
+
+      // Show the uploaded image in chat
+      const reader = new FileReader();
+      reader.onload = () => {
+        const img = document.createElement('img');
+        img.src = reader.result;
+        img.className = 'chat-img';
+        img.onclick = () => showPopup(reader.result);
+
+        const chatItem = document.createElement('div');
+        chatItem.className = 'chat-item';
+        chatItem.innerHTML = `<strong>User uploaded:</strong>`;
+        chatItem.appendChild(img);
+        chat.appendChild(chatItem);
+
+        const codeBlock = document.createElement('pre');
+        codeBlock.textContent = code;
+        chat.appendChild(codeBlock);
+
+        askFollowUp(code);
+      };
+      reader.readAsDataURL(file);
+    } catch (err) {
+      const errBlock = document.createElement('pre');
+      errBlock.textContent = `Failed to generate Terraform: ${err?.message || err}`;
+      chat.appendChild(errBlock);
+    } finally {
+      // Re-enable button + hide progress regardless of success/failure
+      resetGeneratingUI();
+    }
+  }
+
+  function askFollowUp(code) {
+    const followUp = document.createElement('div');
+    followUp.className = 'chat-item';
+    followUp.innerHTML = `
+      <p>Would you like to:</p>
+      <button onclick="editCode()">Edit Code</button>
+      <button onclick="lintCode()">Run Terraform Lint</button>
+      <button onclick="estimateCost()">Estimate Monthly Cost</button>
+    `;
+    chat.appendChild(followUp);
+  }
+
+  function editCode() {
+    const instruction = prompt('Enter your edit instruction:');
+    if (!instruction) return;
+
+    fetch('/edit', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ instruction })
+    })
+    .then(res => res.text())
+    .then(updated => {
+      const updatedBlock = document.createElement('pre');
+      updatedBlock.textContent = updated;
+      chat.appendChild(updatedBlock);
+    })
+    .catch(err => {
+      const errBlock = document.createElement('pre');
+      errBlock.textContent = `Failed to edit: ${err?.message || err}`;
+      chat.appendChild(errBlock);
     });
-  </script>
+  }
+
+  function lintCode() {
+    fetch('/lint')
+      .then(res => {
+        const type = res.headers.get('content-type') || '';
+        if (type.includes('application/json')) return res.json();
+        return res.text().then(t => ({ _raw: t }));
+      })
+      .then(result => {
+        const lintBlock = document.createElement('pre');
+ 
+        // 🔥 Add styling here (correct location)
+        lintBlock.style.background = "#fff3f3";
+        lintBlock.style.borderLeft = "4px solid #e74c3c";
+        lintBlock.style.padding = "12px";
+        lintBlock.style.borderRadius = "6px";
+        lintBlock.style.whiteSpace = "pre-wrap";
+
+        // If JSON came from server → pretty print
+        if (result && !result._raw) {
+          lintBlock.textContent = JSON.stringify(result, null, 2);
+        } else {
+          // Fallback if server sent plain text
+          lintBlock.textContent = result._raw;
+        }
+
+        chat.appendChild(lintBlock);
+      })
+      .catch(err => {
+        const lintBlock = document.createElement('pre');
+        lintBlock.textContent = "Lint failed: " + err.message;
+        chat.appendChild(lintBlock);
+      });
+  }
+
+  function estimateCost() {
+    fetch('/estimate-cost')
+      .then(res => res.json())
+      .then(data => {
+        const costBlock = document.createElement('div');
+        costBlock.className = 'chat-item';
+        costBlock.innerHTML = `<strong>Estimated Monthly Cost:</strong> $${data.cost}`;
+        chat.appendChild(costBlock);
+      });
+  }
+</script>
+
 </body>
 </html>
